--- a/ci/tasks/generate-env.yml
+++ b/ci/tasks/generate-env.yml
@@ -2,7 +2,7 @@
 platform: linux
 image_resource:
   type: docker-image
-  source: {repository: jrjohnsongoog/omgci}
+  source: {repository: m0pt0pmatt/omgci}
 inputs:
 - name: omg-src-in
 outputs:
