--- a/ci/tasks/run-unit.yml
+++ b/ci/tasks/run-unit.yml
@@ -2,7 +2,9 @@
 platform: linux
 image_resource:
   type: docker-image
-  source: {repository: jrjohnsongoog/omgci}
+  source:
+    repository: library/golang
+    tag: 1.10-alpine
 inputs:
 - name: omg-src-in
 run:
