--- a/ci/tasks/run-unit.yml
+++ b/ci/tasks/run-unit.yml
@@ -2,9 +2,7 @@
 platform: linux
 image_resource:
   type: docker-image
-  source:
-    repository: library/golang
-    tag: 1.10-alpine
+  source: {repository: jrjohnsongoog/omgci}
 inputs:
 - name: omg-src-in
 run:
