--- a/src/omg-cli/templates/assets/deployment.yml
+++ b/src/omg-cli/templates/assets/deployment.yml
@@ -21,9 +21,10 @@ tiles:
   ops_files:
   - tiles/srt/network/3-az-configuration.yml
   - tiles/srt/features/system_blobstore-external_gcs_service_account.yml
+  - tiles/srt/features/haproxy_forward_tls-disable.yml
   - tiles/srt/resource/control_elb_names.yml
-  - tiles/srt/resource/ha_proxy_elb_names.yml
   - tiles/srt/resource/router_elb_names.yml
+  - tiles/srt/resource/tcp_router_elb_names.yml
   vars_files:
   - tiles/srt/product-default-vars.yml
   - tiles/srt/resource-vars.yml
@@ -35,15 +36,17 @@ tiles:
     singleton_availability_zone: ((azs_0))
     cloud_controller/system_domain: ((sys_domain))
     cloud_controller/apps_domain: ((apps_domain))
-    networking_poe_ssl_certs_0/name: pcf-certs
+    networking_poe_ssl_certs_0/name: Certificate
     networking_poe_ssl_certs_0/certificate: ((ssl_cert))
     networking_poe_ssl_certs_0/privatekey: ((ssl_cert_private_key))
+    ha_proxy/skip_cert_verify: true
     credhub_key_encryption_passwords_0/key: ((credhub_key))
     credhub_key_encryption_passwords_0/name: ((credhub_key_name))
+    credhub_key_encryption_passwords_0/primary: true
     haproxy_forward_tls/enable/backend_ca: ((ssl_cert))
     uaa/service_provider_key_credentials/certificate: ((ssl_cert))
     uaa/service_provider_key_credentials/privatekey: ((ssl_cert_private_key))
-    security_acknowledgement: true
+    security_acknowledgement: X
     mysql_monitor/recipient_email: admin@example.org
     system_blobstore/external_gcs_service_account/project_id: ((blobstore_service_account_project))
     system_blobstore/external_gcs_service_account/service_account_email: ((blobstore_service_account_email))
@@ -53,8 +56,8 @@ tiles:
     system_blobstore/external_gcs_service_account/packages_bucket: ((packages_bucket))
     system_blobstore/external_gcs_service_account/resources_bucket: ((resources_bucket))
     control_elb_names: [tcp:((ssh_router_pool))]
-    ha_proxy_elb_names: [tcp:((wss_router_pool)), http:((http_lb_backend_name))]
-    router_elb_names: [tcp:((tcp_router_pool))]
+    router_elb_names: [tcp:((wss_router_pool)), http:((http_lb_backend_name))]
+    tcp_router_elb_names: [tcp:((tcp_router_pool))]
 
 
 # - product:
