--- a/src/omg-cli/templates/assets/options/full.yml
+++ b/src/omg-cli/templates/assets/options/full.yml
@@ -5,34 +5,86 @@
 
 # CF
 - type: replace
-  path: /tiles/name=cf/ops_files/-
-  value: tiles/srt/network/3-az-configuration.yml
-- type: replace
-  path: /tiles/name=cf/vars/az2_name?
-  value: ((azs_1))
-- type: replace
-  path: /tiles/name=cf/vars/az3_name?
-  value: ((azs_2))
-
-- type: replace
-  path: /tiles/name=cf/product/file_glob
-  value: "cf*.pivotal"
-
-- type: replace
-  path: /tiles/name=cf/ops_files?
+  path: /tiles/name=cf
   value:
+    name: cf
+    version: 2.4.4
+    product:
+      product_slug: elastic-runtime
+      release_version: 2.4.4
+      file_glob: "cf*.pivotal"
+    stemcell:
+      product_slug: stemcells-ubuntu-xenial
+      release_version: "170.38"
+      file_glob: "*google*.tgz"
+    manifest: tiles/ert/product.yml
+    ops_files:
+    - tiles/ert/network/3-az-configuration.yml
     - tiles/ert/features/system_blobstore-external_gcs_service_account.yml
+    - tiles/ert/features/system_database-external.yml
     - tiles/ert/features/haproxy_forward_tls-disable.yml
+    - tiles/ert/features/tcp_routing-enable.yml
     - tiles/ert/resource/diego_brain_elb_names.yml
     - tiles/ert/resource/router_elb_names.yml
     - tiles/ert/resource/tcp_router_elb_names.yml
-
-- type: replace
-  path: /tiles/name=cf/vars_files?
-  value:
+    vars_files:
     - tiles/ert/product-default-vars.yml
     - tiles/ert/resource-vars.yml
     - tiles/ert/errand-vars.yml
+    vars:
+      network_name: ((ert_subnet_name))
+      az2_name: ((azs_1))
+      az3_name: ((azs_2))
+      singleton_availability_zone: ((azs_0))
+      cloud_controller/system_domain: ((sys_domain))
+      cloud_controller/apps_domain: ((apps_domain))
+      networking_poe_ssl_certs_0/name: Certificate
+      networking_poe_ssl_certs_0/certificate: ((ssl_cert))
+      networking_poe_ssl_certs_0/privatekey: ((ssl_cert_private_key))
+      ha_proxy/skip_cert_verify: true
+      haproxy_forward_tls/enable/backend_ca: ((ssl_cert))
+      credhub_key_encryption_passwords_0/key: ((credhub_key))
+      credhub_key_encryption_passwords_0/name: ((credhub_key_name))
+      credhub_key_encryption_passwords_0/primary: true
+      uaa/service_provider_key_credentials/certificate: ((ssl_cert))
+      uaa/service_provider_key_credentials/privatekey: ((ssl_cert_private_key))
+      security_acknowledgement: X
+      mysql_monitor/recipient_email: admin@example.org
+      system_blobstore/external_gcs_service_account/project_id: ((blobstore_service_account_project))
+      system_blobstore/external_gcs_service_account/service_account_email: ((blobstore_service_account_email))
+      system_blobstore/external_gcs_service_account/service_account_json_key: ((blobstore_gcp_service_account_key))
+      system_blobstore/external_gcs_service_account/buildpacks_bucket: ((buildpacks_bucket))
+      system_blobstore/external_gcs_service_account/droplets_bucket: ((droplets_bucket))
+      system_blobstore/external_gcs_service_account/packages_bucket: ((packages_bucket))
+      system_blobstore/external_gcs_service_account/resources_bucket: ((resources_bucket))
+      diego_brain_elb_names: [tcp:((ssh_router_pool))]
+      router_elb_names: [tcp:((wss_router_pool)), http:((http_lb_backend_name))]
+      tcp_router_elb_names: [tcp:((tcp_router_pool))]
+      system_database/external/host: ((sql_db_ip))
+      system_database/external/port: ((sql_db_port))
+      system_database/external/account_password: ((ert_sql_password))
+      system_database/external/account_username: ((ert_sql_username))
+      system_database/external/app_usage_service_password: ((ert_sql_password))
+      system_database/external/app_usage_service_username: ((ert_sql_username))
+      system_database/external/autoscale_password: ((ert_sql_password))
+      system_database/external/autoscale_username: ((ert_sql_username))
+      system_database/external/ccdb_password: ((ert_sql_password))
+      system_database/external/ccdb_username: ((ert_sql_username))
+      system_database/external/diego_password: ((ert_sql_password))
+      system_database/external/diego_username: ((ert_sql_username))
+      system_database/external/locket_password: ((ert_sql_password))
+      system_database/external/locket_username: ((ert_sql_username))
+      system_database/external/networkpolicyserver_password: ((ert_sql_password))
+      system_database/external/networkpolicyserver_username: ((ert_sql_username))
+      system_database/external/nfsvolume_password: ((ert_sql_password))
+      system_database/external/nfsvolume_username: ((ert_sql_username))
+      system_database/external/notifications_password: ((ert_sql_password))
+      system_database/external/notifications_username: ((ert_sql_username))
+      system_database/external/routing_password: ((ert_sql_password))
+      system_database/external/routing_username: ((ert_sql_username))
+      system_database/external/silk_password: ((ert_sql_password))
+      system_database/external/silk_username: ((ert_sql_username))
+
 
 # GCP-SERVICE-BROKER
 - type: replace
@@ -45,9 +97,9 @@
   path: /tiles/name=gcp-service-broker/vars/az3_name?
   value: ((azs_2))
 
-# GCP-SERVICE-BROKER
+# GCP-STACKDRIVER-NOZZLE
 - type: replace
-  path: /tiles/name=stackdriver-nozzle/ops_files/-
+  path: /tiles/name=stackdriver-nozzle/ops_files?/-
   value: tiles/gcp-stackdriver-nozzle/network/3-az-configuration.yml
 - type: replace
   path: /tiles/name=stackdriver-nozzle/vars/az2_name?
