--- a/src/omg-cli/templates/assets/deployment.yml
+++ b/src/omg-cli/templates/assets/deployment.yml
@@ -56,6 +56,7 @@ tiles:
     control_elb_names: [tcp:((ssh_router_pool))]
     router_elb_names: [tcp:((wss_router_pool)), http:((http_lb_backend_name))]
     tcp_router_elb_names: [tcp:((tcp_router_pool))]
+    tcp_routing/enable/reservable_ports: ((tcp_port_range))
 
 - name: gcp-service-broker
   version: 4.2.2
