--- a/src/omg-cli/templates/mocks/vars-smallfootprint.yml
+++ b/src/omg-cli/templates/mocks/vars-smallfootprint.yml
@@ -16,3 +16,25 @@ ops_manager_service_account_key: { type: service_account, project_id: test-proje
 project: test-project
 region: test-region
 vm_tag: test-tag
+apps_domain: apps.example.com
+sys_domain: sys.example.com
+credhub_key: test-credhub-key
+credhub_key_name: test-credhub-key-name
+blobstore_gcp_service_account_key: { type: service_account, project_id: test-blobstore-project }
+blobstore_service_account_email: blobstore@example.com
+blobstore_service_account_project: test-blobstore-project
+buildpacks_bucket: test-buildpacks-bucket
+droplets_bucket: test-droplets-bucket
+packages_bucket: test-packges-bucket
+resources_bucket: test-resources-bucket
+service_broker_db_ip: test-broker-db-ip
+service_broker_db_password: test-broker-db-password
+service_broker_db_username: test-broker-db-username
+service_broker_service_account_key: { type: service_account, project_id: test-broker-project }
+http_lb_backend_name: test-http-lb-name
+ssh_router_pool: test-ssh-pool-name
+tcp_router_pool: test-tcp-pool-name
+wss_router_pool: test-wss-pool-name
+ssl_cert: test-ssl-cert
+ssl_cert_private_key: test-ssl-key
+stackdriver_service_account_key:  { type: service_account, project_id: test-stackdriver-project }
