--- a/src/omg-cli/templates/mocks/cf-smallfootprint.yml
+++ b/src/omg-cli/templates/mocks/cf-smallfootprint.yml
@@ -3,7 +3,7 @@ product-properties:
   .cloud_controller.allow_app_ssh_access:
     value: true
   .cloud_controller.apps_domain:
-    value: apps.gcp-1click-test.starkandwayne.com
+    value: apps.example.com
   .cloud_controller.default_app_memory:
     value: 1024
   .cloud_controller.default_app_ssh_access:
@@ -25,7 +25,7 @@ product-properties:
   .cloud_controller.staging_timeout_in_seconds:
     value: 900
   .cloud_controller.system_domain:
-    value: sys.gcp-1click-test.starkandwayne.com
+    value: sys.example.com
   .diego_brain.starting_container_count_maximum:
     value: 200
   .doppler.message_drain_buffer_size:
@@ -102,9 +102,11 @@ product-properties:
     value: internal_mysql
   .properties.credhub_key_encryption_passwords:
     value:
-    - name: Jw99UA
+    - name: test-credhub-key-name
       primary: true
       provider: internal
+      key:
+        secret: test-credhub-key
   .properties.diego_database_max_open_connections:
     value: 100
   .properties.diego_log_timestamp_format:
@@ -162,6 +164,14 @@ product-properties:
     value: false
   .properties.push_apps_manager_enable_invitations:
     value: true
+  .properties.push_apps_manager_nav_links:
+    value:
+    - href: /marketplace
+      name: Marketplace
+    - href: https://docs.pivotal.io/pivotalcf/2-4/pas/intro.html
+      name: Docs
+    - href: /tools
+      name: Tools
   .properties.push_apps_manager_poll_interval:
     value: 30
   .properties.route_integrity:
@@ -209,7 +219,23 @@ product-properties:
   .properties.syslog_use_tcp_for_file_forwarding_local_transport:
     value: false
   .properties.system_blobstore:
-    value: internal
+    value: external_gcs_service_account
+  .properties.system_blobstore.external_gcs_service_account.buildpacks_bucket:
+    value: test-buildpacks-bucket
+  .properties.system_blobstore.external_gcs_service_account.droplets_bucket:
+    value: test-droplets-bucket
+  .properties.system_blobstore.external_gcs_service_account.packages_bucket:
+    value: test-packges-bucket
+  .properties.system_blobstore.external_gcs_service_account.resources_bucket:
+    value: test-resources-bucket
+  .properties.system_blobstore.external_gcs_service_account.project_id:
+    value: test-blobstore-project
+  .properties.system_blobstore.external_gcs_service_account.service_account_email:
+    value: blobstore@example.com
+  .properties.system_blobstore.external_gcs_service_account.service_account_json_key:
+    value:
+      type: service_account
+      project_id: test-blobstore-project
   .properties.system_blobstore_ccdroplet_max_staged_droplets_stored:
     value: 2
   .properties.system_blobstore_ccpackage_max_valid_packages_stored:
@@ -274,13 +300,13 @@ product-properties:
     value: 10\.\d{1,3}\.\d{1,3}\.\d{1,3}|192\.168\.\d{1,3}\.\d{1,3}|169\.254\.\d{1,3}\.\d{1,3}|127\.\d{1,3}\.\d{1,3}\.\d{1,3}|172\.1[6-9]{1}\.\d{1,3}\.\d{1,3}|172\.2[0-9]{1}\.\d{1,3}\.\d{1,3}|172\.3[0-1]{1}\.\d{1,3}\.\d{1,3}
 network-properties:
   network:
-    name: pcf-ert-subnet
+    name: test-ert-subnet
   other_availability_zones:
-  - name: europe-west4-c
-  - name: europe-west4-b
-  - name: europe-west4-a
+  - name: testzone-1
+  - name: testzone-2
+  - name: testzone-3
   singleton_availability_zone:
-    name: europe-west4-c
+    name: testzone-1
 resource-config:
   backup_restore:
     instances: automatic
@@ -288,79 +314,80 @@ resource-config:
       size_mb: automatic
     instance_type:
       id: automatic
-    internet_connected: false
   blobstore:
     instances: automatic
     persistent_disk:
       size_mb: automatic
     instance_type:
       id: automatic
-    internet_connected: false
   compute:
     instances: automatic
     instance_type:
       id: automatic
-    internet_connected: false
   control:
     instances: automatic
     instance_type:
       id: automatic
-    internet_connected: false
     elb_names:
-    - tcp:pcf-cf-ssh
+    - tcp:test-ssh-pool-name
   database:
     instances: automatic
     persistent_disk:
       size_mb: automatic
     instance_type:
       id: automatic
-    internet_connected: false
   ha_proxy:
     instances: 0
     instance_type:
       id: automatic
-    internet_connected: false
   mysql_monitor:
     instances: 0
     instance_type:
       id: automatic
-    internet_connected: false
   router:
     instances: automatic
     instance_type:
       id: automatic
-    internet_connected: false
     elb_names:
-    - tcp:pcf-cf-wss
-    - http:pcf-httpslb
+    - tcp:test-wss-pool-name
+    - http:test-http-lb-name
   tcp_router:
     instances: 1
     persistent_disk:
       size_mb: automatic
     instance_type:
       id: automatic
-    internet_connected: false
     elb_names:
-    - tcp:pcf-cf-tcp
+    - tcp:test-tcp-pool-name
+
 errand-config:
   deploy-autoscaler:
-    post-deploy-state: true
+    post-deploy-state: default
+    pre-delete-state: default
   deploy-notifications:
-    post-deploy-state: true
+    post-deploy-state: default
+    pre-delete-state: default
   deploy-notifications-ui:
-    post-deploy-state: true
+    post-deploy-state: default
+    pre-delete-state: default
   metric_registrar_smoke_test:
-    post-deploy-state: false
+    post-deploy-state: default
+    pre-delete-state: default
   nfsbrokerpush:
-    post-deploy-state: true
+    post-deploy-state: default
+    pre-delete-state: default
   push-apps-manager:
-    post-deploy-state: true
+    post-deploy-state: default
+    pre-delete-state: default
   push-usage-service:
-    post-deploy-state: true
+    post-deploy-state: default
+    pre-delete-state: default
   smbbrokerpush:
-    post-deploy-state: false
+    post-deploy-state: default
+    pre-delete-state: default
   smoke_tests:
-    post-deploy-state: true
+    post-deploy-state: default
+    pre-delete-state: default
   test-autoscaling:
-    post-deploy-state: true
-
+    post-deploy-state: default
+    pre-delete-state: default
