Remove default logging property + match small footprint resources

--- a/src/omg-cli/templates/mocks/bosh-smallfootprint.yml
+++ b/src/omg-cli/templates/mocks/bosh-smallfootprint.yml
@@ -66,8 +66,8 @@ properties-configuration:
 resource-configuration:
   compilation:
     instance_type:
-      id: large.cpu
-    instances: 4
+      id: medium.cpu
+    instances: 1
   director:
     instance_type:
       id: automatic
