--- a/src/omg-cli/templates/assets/deployment.yml
+++ b/src/omg-cli/templates/assets/deployment.yml
@@ -59,6 +59,7 @@ tiles:
     tcp_routing/enable/reservable_ports: ((tcp_port_range))
     gorouter_ssl_ciphers: ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384
     haproxy_ssl_ciphers: DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384
+    mysql_monitor_instances: 0
 
 
 - name: gcp-service-broker
