--- a/src/omg-cli/templates/mocks/service-broker.yml
+++ b/src/omg-cli/templates/mocks/service-broker.yml
@@ -1,23 +1,54 @@
+errand-config:
+  delete-all:
+    post-deploy-state: default
+    pre-delete-state: default
+  deploy-all:
+    post-deploy-state: default
+    pre-delete-state: default
+network-properties:
+  network:
+    name: test-services-subnet
+  other_availability_zones:
+  - name: testzone-1
+  singleton_availability_zone:
+    name: testzone-1
 product-name: gcp-service-broker
 product-properties:
-  .properties.allow_paid_service_plans:
-    value: false
-  .properties.apply_open_security_group:
-    value: true
   .properties.db_host:
-    value: 35.204.27.255
+    value: test-broker-db-ip
   .properties.db_name:
     value: servicebroker
+  .properties.db_password:
+    value:
+      secret: test-broker-db-password
   .properties.db_port:
     value: "3306"
   .properties.db_username:
-    value: OMnalfxQuUA
+    value: test-broker-db-username
   .properties.gcp_service_broker_enable_global_access_to_plans:
     value: true
+  .properties.gsb_brokerpak_config:
+    value: '{}'
+  .properties.gsb_compatibility_enable_catalog_schemas:
+    value: "false"
+  .properties.gsb_compatibility_enable_cf_sharing:
+    value: "false"
+  .properties.gsb_compatibility_enable_eol_services:
+    value: "false"
+  .properties.gsb_compatibility_enable_gcp_beta_services:
+    value: "true"
+  .properties.gsb_compatibility_enable_gcp_deprecated_services:
+    value: "false"
   .properties.gsb_compatibility_enable_input_validation:
-    value: true
+    value: "true"
+  .properties.gsb_compatibility_enable_preview_services:
+    value: "true"
+  .properties.gsb_compatibility_enable_terraform_services:
+    value: "false"
+  .properties.gsb_compatibility_enable_unmaintained_services:
+    value: "false"
   .properties.gsb_compatibility_three_to_four_legacy_plans:
-    value: false
+    value: "false"
   .properties.gsb_service_google_bigquery_bind_defaults:
     value: '{}'
   .properties.gsb_service_google_bigquery_enabled:
@@ -50,7 +81,13 @@ product-properties:
     value: '{}'
   .properties.gsb_service_google_cloudsql_postgres_whitelist:
     value: cloudsql.editor,cloudsql.viewer,cloudsql.client
+  .properties.gsb_service_google_dataflow_enabled:
+    value: true
   .properties.gsb_service_google_datastore_enabled:
+    value: true
+  .properties.gsb_service_google_dialogflow_enabled:
+    value: true
+  .properties.gsb_service_google_firestore_enabled:
     value: true
   .properties.gsb_service_google_ml_apis_bind_defaults:
     value: '{}'
@@ -78,6 +115,8 @@ product-properties:
     value: spanner.databaseAdmin,spanner.databaseReader,spanner.databaseUser,spanner.viewer
   .properties.gsb_service_google_stackdriver_debugger_enabled:
     value: true
+  .properties.gsb_service_google_stackdriver_monitoring_enabled:
+    value: true
   .properties.gsb_service_google_stackdriver_profiler_enabled:
     value: true
   .properties.gsb_service_google_stackdriver_trace_enabled:
@@ -90,38 +129,14 @@ product-properties:
     value: '{}'
   .properties.gsb_service_google_storage_whitelist:
     value: storage.objectCreator,storage.objectViewer,storage.objectAdmin
-  .properties.org:
-    value: system
   .properties.root_service_account_json:
-    value: |
-      {
-        "type": "service_account",
-        "project_id": "test",
-      }
-  .properties.space:
-    value: gcp-service-broker-space
-network-properties:
-  network:
-    name: pcf-services-subnet
-  other_availability_zones:
-  - name: europe-west4-c
-  - name: europe-west4-b
-  - name: europe-west4-a
-  singleton_availability_zone:
-    name: europe-west4-c
+    value:
+      project_id: test-broker-project
+      type: service_account
 resource-config:
   delete-all:
-    instances: automatic
     instance_type:
       id: automatic
-    internet_connected: true
   deploy-all:
-    instances: automatic
     instance_type:
       id: automatic
-    internet_connected: true
-errand-config:
-  delete-all:
-    pre-delete-state: true
-  deploy-all:
-    post-deploy-state: true
